--- a/text_generation.ipynb
+++ b/text_generation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "text-generation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNU2fU2kNfmYIHl5dn5LK0x",
+      "authorship_tag": "ABX9TyNGxi3J86MaI0W4Ol3B3sif",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,9 +25,105 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VmoCPqMFD2Qj",
+        "colab_type": "text"
+      },
+      "source": [
+        "This work is inpired by https://mayhewsw.github.io/2019/01/16/can-bert-generate-text/"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "XdgRaYcN_6uu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "import tensorflow_hub as hub\n",
+        "\n",
+        "max_seq_length = 128  # Your choice here.\n",
+        "input_word_ids = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
+        "                                       name=\"input_word_ids\")\n",
+        "input_mask = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
+        "                                   name=\"input_mask\")\n",
+        "segment_ids = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
+        "                                    name=\"segment_ids\")\n",
+        "bert_layer = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/2\",\n",
+        "                            trainable=True)\n",
+        "pooled_output, sequence_output = bert_layer([input_word_ids, input_mask, segment_ids])"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FTzrQZEfDlXC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 123
+        },
+        "outputId": "76bad4c3-f40d-4e84-bf08-46ba41acf5c3"
+      },
+      "source": [
+        "!pip install sentencepiece"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting sentencepiece\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d4/a4/d0a884c4300004a78cca907a6ff9a5e9fe4f090f5d95ab341c53d28cbc58/sentencepiece-0.1.91-cp36-cp36m-manylinux1_x86_64.whl (1.1MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.1MB 2.8MB/s \n",
+            "\u001b[?25hInstalling collected packages: sentencepiece\n",
+            "Successfully installed sentencepiece-0.1.91\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eQeKfOgmDVNs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import os\n",
+        "files = os.listdir()\n",
+        "if \"tokenization.py\" not in files:\n",
+        "    !wget https://github.com/tensorflow/models/raw/master/official/nlp/bert/tokenization.py\n",
+        "import tokenization"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x3sDu6zjCbPl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "vocab_file = bert_layer.resolved_object.vocab_file.asset_path.numpy()\n",
+        "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
+        "tokenizer = tokenization.FullTokenizer(vocab_file, do_lower_case)"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qYBEsGgkAVCc",
         "colab_type": "code",
         "colab": {}
       },
